<resources>
    <string name="app_name">Project Boards</string>

    <string name="st_permission_needed_to_be_granted">Permissions required for this feature have been turned off.
        It can be enabled under the Application Settings</string>
    <string name="st_go_to_settings">Settings</string>
    <string name="st_cancel">Cancel</string>
    <string name="st_get_started">Lets Get Started</string>
    <string name="st_back">Back</string>
    <string name="st_no_boards">No Boards Available</string>
    <string name="st_intro_description">Collaborate and Plan Together Across Multiple Devices
        in Project Boards App</string>
    <string name="st_login">Log in</string>
    <string name="st_sign_up">Sign up</string>

    <string name="st_name">Name</string>
    <string name="st_email">Email</string>
    <string name="st_password">Password</string>
    <string name="st_confirm_password">Confirm password</string>
    <string name="st_new_password">New password</string>
    <string name="st_phone">Phone number</string>
    <string name="st_please_enter">Please enter</string>
    <string name="st_enter_data">Please enter Corresponding Data</string>
    <string name="st_password_mismatch">Password mismatch</string>
    <string name="st_registered">You have successfully registered</string>

    <string name="st_profile">Profile</string>
    <string name="st_sign_out">Sign Out</string>
    <string name="st_general">General</string>
    <string name="st_security">Security</string>
    <string name="st_save_changes">Save Changes</string>
    <string name="st_password_changed">Password successfully changed</string>


    <string name="st_new_board">New Board</string>
    <string name="st_board_name">Board Name</string>
    <string name="st_create">Create</string>

    <string name="st_created_by">Created by: </string>
    <string name="st_due_to">Due to: </string>

    <string name="st_members">Members</string>
    <string name="st_add_member">Add member</string>
    <string name="st_tasks">Tasks</string>
    <string name="st_add_task">Add task</string>
    <string name="st_delete_task">Delete task</string>
    <string name="st_delete">Delete</string>
    <string name="st_delete_board">Delete Board</string>
    <string name="st_dangerous_action">Dangerous Actions</string>
</resources>