<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mWhite"
    android:orientation="vertical"
    tools:context=".fragments.IntroFragment">

    <!--Title name-->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textColor="@color/mGreen"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Intro image-->
    <ImageView
        android:id="@+id/intro_icon"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginHorizontal="@dimen/dim_login_margin_horizontal"
        android:layout_marginTop="20dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/st_get_started"
        android:src="@drawable/ic_brainstorm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <!--Description header-->
    <TextView
        android:id="@+id/get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/st_get_started"
        android:textColor="@color/mBlack"
        android:textSize="28sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/intro_icon" />

    <!--Description-->
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/st_intro_description"
        android:textColor="@color/mBlue"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/get_started" />

    <!--Login button-->
    <LinearLayout
        android:id="@+id/ll_log_in"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_login_height"
        android:layout_marginHorizontal="@dimen/dim_login_margin_horizontal"
        android:background="@drawable/bg_rectangle_green_solid"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/st_login"
            android:textAllCaps="false"
            android:textColor="@color/mWhite"
            android:textSize="@dimen/dim_login_text_size" />
    </LinearLayout>

    <!--sign up button-->
    <LinearLayout
        android:id="@+id/ll_sign_up"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_login_height"
        android:layout_marginHorizontal="@dimen/dim_login_margin_horizontal"
        android:layout_marginVertical="20dp"
        android:background="@drawable/bd_rectangle_green_stroke"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_log_in">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/st_sign_up"
            android:textAllCaps="false"
            android:textColor="@color/mGreen"
            android:textSize="@dimen/dim_login_text_size" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>