<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mWhite"
    android:orientation="vertical"
    tools:context=".fragments.LogInFragment">

    <!--back button-->
    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="@dimen/dim_signup_back_size"
        android:layout_height="@dimen/dim_signup_back_size"
        android:layout_marginStart="@dimen/dim_signup_title_margin"
        android:layout_marginTop="@dimen/dim_signup_title_margin"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/st_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/mDarkGreen" />

    <!--login title-->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dim_signup_back_size"
        android:layout_marginStart="@dimen/dim_signup_back_size"
        android:text="@string/st_login"
        android:textAllCaps="true"
        android:textColor="@color/mDarkGreen"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_back"
        app:layout_constraintLeft_toRightOf="@id/iv_back" />

    <!--edit email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/MyEditTextOutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dim_signup_edit_text_margin"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/st_email"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:textAlignment="viewEnd"
            android:textCursorDrawable="@color/mEditTextColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--edit password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/MyEditTextOutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dim_signup_edit_text_margin"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/st_password"
            android:inputType="textPassword"
            android:maxLength="50"
            android:textAlignment="viewEnd"
            android:textCursorDrawable="@color/mEditTextColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--login button-->
    <LinearLayout
        android:id="@+id/ll_log_in"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_login_height"
        android:layout_marginHorizontal="@dimen/dim_signup_edit_text_margin"
        android:background="@drawable/bg_rectangle_green_solid"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/st_login"
            android:textAllCaps="false"
            android:textColor="@color/mWhite"
            android:textSize="@dimen/dim_login_text_size" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>